--- a/index.html
+++ b/index.html
@@ -739,10 +739,9 @@
         options: [
           "They moved the columns to the perimeter.",
           "They used tuned mass dampers.",
-          "They used a glass and aluminium skin.",
-          "They changed the building's height."
+          "They used a glass and aluminium skin."
         ],
-        correctIndex: 2,
+        correctIndex: 3,
         explanation: "Eine Glas- und Aluminiumfassade reduziert das Schwanken nicht gezielt; die anderen Maßnahmen schon."
       },
       {
@@ -1772,3 +1771,4 @@
   </script>
 </body>
 </html>
+
